--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,20 @@
 Package: glebrt
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Gleb Ebert's Commonly Used Functions
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Authors@R: c(
+    person(
+        given = "Gleb G.",
+        family = "Ebert",
+        role = c("aut", "cre", "cph"),
+        email = "dev@gl-eb.me",
+        comment = c(ORCID = "0000-0002-7734-3824")
+    )
+  )
+Description: glebrt contains a collection of functions that I commonly use in my R projects
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+URL: https://github.com/gl-eb/glebrt
+BugReports: https://github.com/gl-eb/glebrt/issues
+RoxygenNote: 7.3.2
