--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(enumerate)
 export(floor_precision)
 export(get_greys)
 export(get_precision)
+export(paste_conjunction)
 export(set_class)
 export(set_ggplot_theme)
 import(rlang)
