add tests for logical vectors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,9 @@ export(floor_precision)
 export(get_greys)
 export(get_precision)
 export(paste_conjunction)
+export(same)
 export(set_class)
 export(set_ggplot_theme)
+export(some)
 import(rlang)
 importFrom(ggplot2,theme_light)
