--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,6 @@ export(same)
 export(set_class)
 export(set_ggplot_theme)
 export(some)
+export(spell_numbers)
 import(rlang)
 importFrom(ggplot2,theme_light)
