--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,5 +13,6 @@ export(set_class)
 export(set_ggplot_theme)
 export(some)
 export(spell_numbers)
+export(spell_range)
 import(rlang)
 importFrom(ggplot2,theme_light)
