--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,5 +15,6 @@ export(set_ggplot_theme)
 export(some)
 export(spell_numbers)
 export(spell_range)
+export(unset_legend)
 import(rlang)
 importFrom(ggplot2,theme_light)
