rename some() to some_of() to resolve conflict with purrr

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,7 @@ export(paste_conjunction)
 export(same)
 export(set_class)
 export(set_ggplot_theme)
-export(some)
+export(some_of)
 export(spell_numbers)
 export(spell_range)
 export(unset_legend)
