use svglite writer for vdiffr::expect_doppelganger()

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -34,6 +34,8 @@ Imports:
     tidyselect,
     xfun
 Suggests:
+    svglite,
     testthat (>= 3.0.0),
-    vdiffr
+    vdiffr,
+    withr
 Config/testthat/edition: 3
