--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,5 +18,5 @@ export(some_of)
 export(spell_numbers)
 export(spell_range)
 export(unset_legend)
+import(ggplot2)
 import(rlang)
-importFrom(ggplot2,theme_light)
